--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ paginate: 5
 paginate_path: page/:num
 
 blog:
-    name: 陈汝丹                                                # 博客名称
+    name: 陈廉政                                                # 博客名称
     description: 个人博客                                         # 博客描述
-    title: 听见下雨的声音                                              # 网页标题
-    url: chenrudan.github.io                                        # 博客地址
+    title: Image Processing                                              # 网页标题
+    url: lianzhengchen.github.io                                        # 博客地址
     qiniu:                                               # 七牛云地址
 author:
-    name: 陈汝丹                                               # 作者名称
-    email: chenrudan123@gmail.com                                              # 邮箱地址
-    weibo: http://weibo.com/u/3842815916                                              # 微博地址
-    github: https://github.com/chenrudan                                             # GitHub地址
+    name: 陈廉政                                               # 作者名称
+    email: LZChenmail@163.com                                              # 邮箱地址
+    weibo:                                             # 微博地址
+    github: https://github.com/LianzhengChen                                            # GitHub地址
     logo: http://7xkmdr.com1.z0.glb.clouddn.com/90fba609961616fae2b927.jpg # logo地址
-    url: chenrudan.github.io                                        # 博客地址
+    url: lianzhengchen.github.io                                        # 博客地址
     douban: 
         name:                                            # 豆瓣地址名称
         key:               # 豆瓣API Key
