--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author:
     email: LZChenmail@163.com                                              # 邮箱地址
     weibo:                                             # 微博地址
     github: https://github.com/LianzhengChen                                            # GitHub地址
-    logo: http://i.imqur.com/XR5VdDA.jpg # logo地址
+    logo: http://i13.tietuku.com/07a853ba14bc427f.jpg # logo地址
     url: lianzhengchen.github.io                                        # 博客地址
     douban: 
         name:                                            # 豆瓣地址名称
